--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>vue_timline</title>
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
     <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.14.1/lodash.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
